my code has an error in it the text is too low and the image is too how can i fix it?

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,67 @@
 body {
   margin: 0;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: small;
+  font-style: bold;
 }
+
+
+li {
+  padding: 23px 0;
+  margin-right: 21px;
+}
+
+.last-element {
+  margin-right: 0;
+}
+
+.container {
+  padding: 0 50px;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: center;
+  align-items: center;
+}
+
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+.nav__links {
+  padding: 23px 0;
+}
+
+img {
+  align-self: center;
+  overflow: clip;
+}
+
+
+:hover {
+  color: #00ACDC;
+}
+
+.is-active::after {
+  display: block;
+  content: '';
+  background: #00ACDC;;
+  position: absolute;
+  width: 37px;
+  height: 4px;
+
+}
+
+.is-active {
+  color: #00ACDC;
+  position: relative;
+}
+
+
